--- a/_templates/modul.html
+++ b/_templates/modul.html
@@ -8,6 +8,8 @@
     --android-icon: url('/android.svg');
     --java-color: #4a148c;
     --java-icon: url('/java.svg');
+    --firebase-color: #f57c00;
+    --firebase-icon: url('/firebase.svg');
 }
 
 body {
