--- a/dam-m3/index.html
+++ b/dam-m3/index.html
@@ -10,6 +10,8 @@
     --java-icon: url('/java.svg');
     --firebase-color: #f57c00;
     --firebase-icon: url('/firebase.svg');
+    --web-color: #4285f4;
+    --web-icon: url('/web.svg');
 }
 
 body {
