webfilemanager, webcms, weblms

--- a/webcms/index.html
+++ b/webcms/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0, user-scalable=yes">
   <meta name="theme-color" content="#4F7DC9">
   <meta charset="UTF-8">
-  <title>Aplicacions WEB</title>
+  <title>Gestor de continguts</title>
   <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Source+Code+Pro:400|Roboto:400,300,400italic,500,700|Roboto+Mono">
   <link rel="stylesheet" href="//fonts.googleapis.com/icon?family=Material+Icons">
   <link rel="stylesheet" href="https://storage.googleapis.com/codelab-elements/codelab-elements.css">
@@ -22,17 +22,17 @@
 <body>
   <google-codelab-analytics gaid="UA-49880327-14"></google-codelab-analytics>
   <google-codelab codelab-gaid=""
-                  id="webapps"
-                  title="Aplicacions WEB"
+                  id="webcms"
+                  title="Gestor de continguts"
                   environment="web"
                   feedback-link="/smx-m8">
     
-      <google-codelab-step label="Aplicacions web" duration="0">
+      <google-codelab-step label="Gestor de continguts" duration="0">
         <p>Tecnologies</p>
 <p>Client: Firefox, HTML, CSS, JAVASCRIPT</p>
 <p>Servidor: Apache, PHP, MySQL</p>
 <p class="image-container"><img style="width: 697.70px" src="img/ddb678a79fcb81d8.png"></p>
-<h3 is-upgraded><a href="https://github.com/gerardfp/webapps" target="_blank">https://github.com/gerardfp/webapps</a> </h3>
+<h3 is-upgraded><a href="https://github.com/gerardfp/webcms" target="_blank">https://github.com/gerardfp/webcms</a> </h3>
 
 
       </google-codelab-step>
