--- a/smx-m8/index.html
+++ b/smx-m8/index.html
@@ -119,10 +119,10 @@ a {
 </div>
 <div class="cards">
 
-<a href="/webapps">
+<a href="/webfilemanager">
         <div class="card web">
             <div class="card-title">
-                <span>Aplicacions WEB</span>
+                <span>Gestor d&#39;arxius web</span>
             </div>
             <div class="card-description">
 
@@ -132,10 +132,23 @@ a {
                 <div class="button">Start</div>    
             </div>
         </div>
-    </a><a href="/webfilemanager">
+    </a><a href="/webcms">
         <div class="card web">
             <div class="card-title">
-                <span>Gestor d&#39;arxius web</span>
+                <span>Gestor de continguts</span>
+            </div>
+            <div class="card-description">
+
+            </div>
+            <div class="card-footer">
+                <div class="icon"></div>
+                <div class="button">Start</div>    
+            </div>
+        </div>
+    </a><a href="/weblms">
+        <div class="card web">
+            <div class="card-title">
+                <span>Portal web d&#39;aprenentatge</span>
             </div>
             <div class="card-description">
 
