--- a/smx-m8/index.html
+++ b/smx-m8/index.html
@@ -119,7 +119,20 @@ a {
 </div>
 <div class="cards">
 
-<a href="/webfilemanager">
+<a href="/webtasks">
+        <div class="card web">
+            <div class="card-title">
+                <span>Gestor de tasques</span>
+            </div>
+            <div class="card-description">
+
+            </div>
+            <div class="card-footer">
+                <div class="icon"></div>
+                <div class="button">Start</div>    
+            </div>
+        </div>
+    </a><a href="/webfilemanager">
         <div class="card web">
             <div class="card-title">
                 <span>Gestor d&#39;arxius web</span>
