--- a/smx-m8/index.html
+++ b/smx-m8/index.html
@@ -132,6 +132,19 @@ a {
                 <div class="button">Start</div>    
             </div>
         </div>
+    </a><a href="/webforum">
+        <div class="card web">
+            <div class="card-title">
+                <span>Forum</span>
+            </div>
+            <div class="card-description">
+
+            </div>
+            <div class="card-footer">
+                <div class="icon"></div>
+                <div class="button">Start</div>    
+            </div>
+        </div>
     </a><a href="/webfilemanager">
         <div class="card web">
             <div class="card-title">
@@ -162,6 +175,19 @@ a {
         <div class="card web">
             <div class="card-title">
                 <span>Portal web d&#39;aprenentatge</span>
+            </div>
+            <div class="card-description">
+
+            </div>
+            <div class="card-footer">
+                <div class="icon"></div>
+                <div class="button">Start</div>    
+            </div>
+        </div>
+    </a><a href="/webaccounts">
+        <div class="card web">
+            <div class="card-title">
+                <span>Comptes d&#39;usuari</span>
             </div>
             <div class="card-description">
 
