--- a/smx-m8/index.html
+++ b/smx-m8/index.html
@@ -101,7 +101,17 @@ a {
 }
 
 
-.card.web{
+.card.java{
+    border-color: var(--java-color);
+}
+
+.card.java .icon{
+    background-image: var(--java-icon);
+}
+
+.card.java .button{
+    background-color: var(--java-color);
+}.card.web{
     border-color: var(--web-color);
 }
 
@@ -115,7 +125,7 @@ a {
 </style>
 
 <div class="title">
-    <span>SMX-M8-Aplicacions web</span>
+    <span>SMX-M8-Aplicacions Web</span>
 </div>
 <div class="cards">
 
@@ -188,6 +198,19 @@ a {
         <div class="card web">
             <div class="card-title">
                 <span>Comptes d&#39;usuari</span>
+            </div>
+            <div class="card-description">
+
+            </div>
+            <div class="card-footer">
+                <div class="icon"></div>
+                <div class="button">Start</div>    
+            </div>
+        </div>
+    </a><a href="/entorndetreball">
+        <div class="card java">
+            <div class="card-title">
+                <span>Android</span>
             </div>
             <div class="card-description">
 
