--- a/smx-m8/index.html
+++ b/smx-m8/index.html
@@ -101,17 +101,7 @@ a {
 }
 
 
-.card.java{
-    border-color: var(--java-color);
-}
-
-.card.java .icon{
-    background-image: var(--java-icon);
-}
-
-.card.java .button{
-    background-color: var(--java-color);
-}.card.web{
+.card.web{
     border-color: var(--web-color);
 }
 
@@ -208,9 +198,9 @@ a {
             </div>
         </div>
     </a><a href="/entorndetreball">
-        <div class="card java">
+        <div class="card web">
             <div class="card-title">
-                <span>Android</span>
+                <span>Entorn de treball</span>
             </div>
             <div class="card-description">
 
