--- a/entorndetreball/index.html
+++ b/entorndetreball/index.html
@@ -1,8 +1,8 @@
 <meta charset="utf-8">
-<script src="/.js/script.js"></script>
-<link rel="stylesheet" href="/.highlight.js/default.min.css">
-<script src="/.highlight.js/highlight.min.js"></script>
-<link rel="stylesheet" href="/.css/estil.css">
+<script src="/sofi/js/script.js"></script>
+<link rel="stylesheet" href="/sofi/highlight.js/default.min.css">
+<script src="/sofi/highlight.js/highlight.min.js"></script>
+<link rel="stylesheet" href="/sofi/css/estil.css">
 
 <section>
     <h1>Pràctica 1: Entorn de treball</h1>
