--- a/entorndetreball/index.html
+++ b/entorndetreball/index.html
@@ -167,13 +167,13 @@ apt install apache2
         <terminal>
             <host>root@mywebserver</host>
             <shell>
-1: lo: <LOOPBACK,UP,LOWER_UP> mtu 65536 qdisc noqueue state UNKNOWN group default qlen 1000
+1: lo: &lt;LOOPBACK,UP,LOWER_UP&gt; mtu 65536 qdisc noqueue state UNKNOWN group default qlen 1000
     link/loopback 00:00:00:00:00:00 brd 00:00:00:00:00:00
     inet 127.0.0.1/8 scope host lo
           valid_lft forever preferred_lft forever
     inet6 ::1/128 scope host
           valid_lft forever preferred_lft forever
-21: eth0@if22: <BROADCAST,MULTICAST,UP,LOWER_UP> mtu 1500 qdisc UP group default qlen 1000
+21: eth0@if22: &lt;BROADCAST,MULTICAST,UP,LOWER_UP&gt; mtu 1500 qdisc UP group default qlen 1000
     link/ether 00:16:3e:5d:fc:ea brd ff:ff:ff:ff:ff:ff link-netnsid 0
     inet <red>10.161.122.237</red>/24 brd 10.50.84.255 scope global dynamic eth0
           valid_lft 3572sec preferred_lft 3572sec
