--- a/inicihtml/index.html
+++ b/inicihtml/index.html
@@ -14,9 +14,8 @@
         aa {
             color: navy;
         }
-
         b{
-
+            color: #e45;
         }
     </code>
     <code markup>
