--- a/entorndetreball/index.html
+++ b/entorndetreball/index.html
@@ -3,6 +3,7 @@
 <script type="module" src="/sofi/js/script.js"></script>
 <link rel="stylesheet" href="/sofi/css/estil.css">
 
+<nav></nav>
 <header>
     <h1>Pràctica 1: Entorn de treball</h1>
 
@@ -38,6 +39,10 @@
         </terminal>
         <p>Ho pots fer també mitjançant Ubuntu Software</p>
         <img src="img/image47.png">
+
+        <!--
+            https://code.visualstudio.com/docs/languages/css?WT.mc_id=vscodecandothat-dotcom-team
+        -->
     </fer>
 </section>
 
@@ -408,6 +413,11 @@ git config --global user.email <red>johndoe@example.com</red>
             <br>Fes clic a <img src="img/image26.png"> i després a <img src="img/image24.png">:</p>
         <img src="img/image3.png">
 
+        <optional>
+            <p>Si no et surt el botó <img src="img/image24.png">, també pots fer-ho fent clic sobre <img src="img/managevscode.png"> i després <menu-item>Sign in to use Github Pull Requests and Issues</menu-item></p>
+            <img src="img/signingithub.png">    
+        </optional>
+
         <p>Clica <menu-item>Allow</menu-item>:</p>
         <img src="img/image45.png">
 
@@ -438,7 +448,7 @@ git config --global user.email <red>johndoe@example.com</red>
             <br>En el nom del repository has de posar el teu <red>username</red> seguit de <name>.github.io</name> 
             i donar-li a <img src="img/publicrepo.png"></p>
 
-        <p>Si el teu nom d'usuari és per exemple <name>monalisa</name>, el nom del repository 
+        <p>Per exemple, si el teu nom d'usuari és <name>monalisa</name>, el nom del repository 
             quedaria com <name>monalisa.github.io</name></p>
         <img src="img/image29.png">
 
